[package]
name = "flume-task-worker-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flume = "0.10.14"
tokio = { version = "1.24.1", features = ["sync", "rt", "rt-multi-thread", "macros", "time"] }
